module1/scrapers/portal_scrapers/output.log
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
<Twilio.Api.V2010.MessageInstance account_sid=AC549514f9d1574729217ebe49d25e0534 sid=SMa5b4d3c2c075632e277c70c06be4b12f>
<Twilio.Api.V2010.MessageInstance account_sid=AC549514f9d1574729217ebe49d25e0534 sid=SMa5b4d3c2c075632e277c70c06be4b12f>
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
<Twilio.Api.V2010.MessageInstance account_sid=AC549514f9d1574729217ebe49d25e0534 sid=SMc48bbb9f31600295cdfcf37995458cd1>
<Twilio.Api.V2010.MessageInstance account_sid=AC549514f9d1574729217ebe49d25e0534 sid=SMc48bbb9f31600295cdfcf37995458cd1>
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
<Twilio.Api.V2010.MessageInstance account_sid=AC549514f9d1574729217ebe49d25e0534 sid=SMad55aae09a04de6eb80e067a5a1c64d0>
<Twilio.Api.V2010.MessageInstance account_sid=AC549514f9d1574729217ebe49d25e0534 sid=SMad55aae09a04de6eb80e067a5a1c64d0>
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
  File "/home/zaid/SmartApply-Prototype/module1/scrapers/portal_scrapers/amazon.py", line 73
    print(option.)
                 ^
SyntaxError: invalid syntax
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
Ontario
The option is selected.
/home/zaid/.local/lib/python3.10/site-packages/google/cloud/firestore_v1/base_collection.py:302: UserWarning: Detected filter using positional arguments. Prefer using the 'filter' keyword argument instead.
  return query.where(field_path, op_string, value)
The option is selected.
Ontario
The option is selected.
[<selenium.webdriver.remote.webelement.WebElement (session="213cd1081d87a97606d2fdaa9a78c473", element="f.CDEBCC8713198967DF1C43370D0E03AE.d.74F4CE1FA65198A4BF3C536CF3454C2D.e.546")>]
The option is selected.
Ontario
The option is selected.
[]
The option is selected.
Ontario
The option is selected.
[]
